--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en"><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,6 +11,113 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      flex-direction: column;
+    }
+    h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      color: #333;
+      margin: 0;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #333;
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello Mom.</h1>
+  <p>My name is Chutiman Congsung nickname is Putter</p>
+  <p>ผมจะบอกว่าหน้านี้ผมเขียนขึ้นมาเอง ขอบคุณที่เข้ามาดูครับ</p>
+</body>
+</html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Hello Mom</title>
+  <style>
+    body {<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello Mom</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      flex-direction: column;
+    }
+    h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      color: #333;
+      margin: 0;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #333;
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello Mom.</h1>
+  <p>My name is Chutiman Congsung nickname is Putter</p>
+  <p>ผมจะบอกว่าหน้านี้ผมเขียนขึ้นมาเอง ขอบคุณที่เข้ามาดูครับ</p>
+</body>
+</html>
+
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello Mom</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      flex-direction: column;
+    }
+    h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      color: #333;
+      margin: 0;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #333;
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello Mom.</h1>
+  <p>My name is Chutiman Congsung nickname is Putter</p>
+  <p>ผมจะบอกว่าหน้านี้ผมเขียนขึ้นมาเอง ขอบคุณที่เข้ามาดูครับ</p>
+</body>
+</html>
+items: center;
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       text-align: center;
